--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -1,4 +1,7 @@
 
+*{
+    margin: 0;
+}
 
 .hdr{
     display: flex;
@@ -14,7 +17,7 @@
 
 
 .categoryCont{
-    width: 90%;
+    width: 80%;
     display: flex;
     justify-content: center;
     gap: 20px;
@@ -27,7 +30,7 @@
         cursor: pointer;
         padding: 10px 10px;
     p{
-        font-size: 20px;
+        font-size: 18px;
     }
 
     }
@@ -43,24 +46,49 @@
 
 }
 
-.grid{
+.main{
+    display: flex;
+    justify-content: center;
+    gap: 40px;
+    width: 100%;
+   
+
+    .filter{
+        width: 205px;
+        height: 388px;
+        background-color: #f1f1f1;
+         margin-top: 50px;
+        border-radius: 10px;
+         border: 1px solid rgb(185, 181, 181);
+         
+    }
+
+    .grid{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 20px;
     justify-self: center;
     margin-top: 50px;
+ 
 
     .mainCont{
     display: flex;
     flex-direction: column;
-    width: 250px;
-    height: 350px;
-    background-color: rgba(255, 0, 0, 0.522);
+    width: 260px;
+    height: 440px;
+    // background-color: rgba(255, 0, 0, 0.522);
+    border-radius: 20px;
+       border: rgb(80, 79, 79) solid 2px;
+       overflow: hidden;
+       transition: 0.4s ease-in-out;
+
+ 
 
     .top{
         width: 100%;
         height: 200px;
-        background-color: gray;
+        background-color: #cfcfcf;
+        // border-radius: 20px;
 
 
         img{
@@ -69,8 +97,72 @@
             margin-top: -30px;
         }
     }
+    .bottom{
+         display: flex;
+         flex-direction: column;
+         justify-content: space-between;
+         height: 50%;
+        .name{
+            display: flex;
+            width: 100%;
+            justify-content: center;
+            margin-top: 20px;
+
+            p{
+                font-weight: bold;
+                font-size: 18px;
+            }
+        }
+        .spiciness{
+             display: flex;
+            width: 100%;
+            justify-content: center;
+
+            p{
+                font-size: 14px;
+            }
+        }
+        .nutVeg{
+             display: flex;
+            width: 100%;
+            justify-content: center;
+            align-items: center;
+            gap: 10px;
+
+            .nut{
+                display: flex;
+                align-items: center;
+
+                p{
+                    font-size: 13px;
+                }
+            }
+            .veg{
+                display: flex;
+                align-items: center;
+
+                p{
+                     font-size: 13px;
+                }
+            }
+        }
+
+        .very-bottom{
+            display: flex;
+            justify-content: space-between;
+            padding: 0px 20px;
+        }
+    }
 
     
 }
 }
 
+}
+
+
+      .mainCont:hover{
+        cursor: pointer;
+        box-shadow: 0px 0px 30px rgb(0, 0, 0);
+        transition: 0.4s ease-in-out;
+       }
