--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -54,13 +54,137 @@
    
 
     .filter{
-        width: 205px;
+        width: 245px;
         height: 388px;
         background-color: #f1f1f1;
          margin-top: 50px;
         border-radius: 10px;
          border: 1px solid rgb(185, 181, 181);
+         display: flex;
+         flex-direction: column;
+         padding: 20px;
          
+
+         .topFilter{
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            width: 100%;
+         }
+
+         .rangeFilter{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+
+            .custom-range {
+  -webkit-appearance: none;  /* Chrome/Safari */
+  width: 300px;              /* სიგანე */
+  height: 12px;              /* სიმაღლე */
+  background: #ff0000;          /* track-ის ფონი */
+  border-radius: 5px;
+}
+
+.range-slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  width: 24px;          /* 👈 ზომა */
+  height: 24px;
+  background: rgb(255, 255, 255);      /* 👈 ფერი */
+  border-radius: 50%;   /* მრგვალი */
+  cursor: pointer;
+  border: 2px solid rgb(255, 0, 0);
+//   margin-top: -7px;     /* შუაში გასწორება */
+}
+
+
+            
+         }
+
+         .checkboxFilter{
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+
+            .nutsCheckboxDiv,.veganCheckboxDiv{
+                display: flex;
+                align-items: center;
+                gap: 20px;
+            }
+
+            .nutsCheckboxDiv{
+                 
+                .chech{
+                    width: 23px;
+                    height: 23px;
+                    border: solid 2.5px rgb(103, 101, 101);
+                    cursor: pointer;
+                    border-radius: 3px;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+
+                    i{
+                        font-size: 15px;
+                        color: rgb(255, 0, 0);
+                    }
+                }
+
+                .chech:hover{
+                    border-color: black;
+                }
+                
+            }
+
+            .veganCheckboxDiv{
+                                .chech{
+                    width: 23px;
+                    height: 23px;
+                    border: solid 2.5px rgb(103, 101, 101);
+                    cursor: pointer;
+                    border-radius: 3px;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+
+                    i{
+                        font-size: 15px;
+                        color: rgb(255, 0, 0);
+                    }
+                }
+
+                .chech:hover{
+                    border-color: black;
+                }
+            }
+         }
+
+         .buttons{
+            margin-top: 20px;
+            display: flex;
+            flex-direction: column;
+            gap: 40px;
+
+            .resetBtn,.applyBtn{
+                padding-top: 10px;
+                padding-bottom: 10px;
+
+                border: none;
+                background-color: red;
+
+                font-size: 16px;
+                color: white;
+                font-weight: bold;
+
+                border-radius: 7px;
+                 transition: 0.3s ease-in-out;
+            }
+
+            .resetBtn:hover,.applyBtn:hover{
+                background-color: gold;
+                transition: 0.4s ease-in-out;
+            }
+         }
     }
 
     .grid{
