--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -25,7 +25,7 @@
     transition: 0.4s ease-in-out;
     border-bottom: red solid 2.5px;
     justify-self: center;
-
+    flex-wrap: wrap;
     .categoryBck{
         cursor: pointer;
         padding: 10px 5px;
@@ -193,7 +193,6 @@
     gap: 20px;
     justify-self: center;
     margin-top: 50px;
- 
 
     .mainCont{
     display: flex;
@@ -289,4 +288,30 @@
         cursor: pointer;
         box-shadow: 0px 0px 30px rgb(0, 0, 0);
         transition: 0.4s ease-in-out;
+       }
+
+
+       @media screen and (max-width: 1130px) {
+        .main{
+             .grid{
+            grid-template-columns: 1fr 1fr;
+        }
+        }
+       
+       }
+
+       @media  screen and (max-width: 850px) {
+        .main{
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+       }
+
+       @media screen and (max-width: 555px) {
+        .main{
+            .grid{
+                grid-template-columns: 1fr;
+            }
+        }
        }
