--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -16,7 +16,62 @@
     // background-color: rgba(37, 37, 36, 0.318);
     justify-content: space-between;
     z-index: 10;
+
+
+    .navii  {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
+        position: absolute;
+        top: 80px;
+        right: 20px;
+        background-color: rgba(0, 0, 0, 0.705);
+        padding: 10px 20px;
+        border-radius: 10px;
+        gap: 10px;
+
+    }
     
+        .burger.active .line:nth-child(1) {
+            transform: rotate(45deg) translate(8px, 7px);
+            }
+
+            .burger.active .line:nth-child(2) {
+            opacity: 0;
+            }
+
+            .burger.active .line:nth-child(3) {
+            transform: rotate(-45deg) translate(7px, -6px);
+            }
+
+
+    
+    
+    .burgerDiv{
+        display: none;
+        flex-direction: column;
+        gap: 5px;
+        cursor: pointer;
+        background-color: rgb(255, 255, 255);
+        padding: 10px;
+        border-radius: 5px;
+
+        .burger{
+            display: flex;
+            flex-direction: column;
+            gap: 5px;
+
+
+               .line{
+            width: 25px;
+            height: 5px;
+            background-color: rgb(0, 0, 0);
+        }
+        }
+     
+    }
 
       &.scrolled {
     background-color: rgba(0, 0, 0, 0.334);
@@ -79,25 +134,23 @@
 }
 
 
-.photo{
-    display: flex;
-    width: 100%;
-    
-    background-image: url('https://images.pexels.com/photos/29122093/pexels-photo-29122093.jpeg');
-    background-position: left;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
-    filter: brightness(80%);
-    height: 450px;
-    justify-content: center;
-    align-items: center;
-    display: flex;
 
-    p{
-        color: white;
-        font-size: 30px;
-        font-weight: bold;
-        
+@media screen and (max-width:920px){
+    .hdr{
+        padding-left: 20px;
+        padding-right: 20px;
     }
+}
+
+@media screen and (max-width: 500px) {
+    .hdr{
+        .burgerDiv{
+            display: flex;
+        }
+    }
+
+    .hdr nav{
+        display: none;
+    }
+
 }
