--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -9,6 +9,12 @@
 </div> -->
 
 
+<div class="photo">
+    <img src="" alt="">
+    <p>Fast and efficient, online ordering you must try.</p>
+</div>
+
+
   <div class="hdr">
     <h1>Categories</h1>
   </div>
