--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,1 +1,21 @@
-<p>cart works!</p>
+<div class="photo">
+    <img src="" alt="">
+    <p>My Cart</p>
+</div>
+
+<h1 style="font-weight: bold;justify-self: center;padding-top: 50px;">Cart</h1>
+
+
+<div class="cartMainContainer">
+    <div class="topCart">
+        <div class="left">
+            <p>Product</p>
+        </div>
+
+        <div class="right">
+            <p>Qty</p>
+            <P>Price</P>
+            <P>Total</P>
+        </div>
+    </div>
+</div>
