--- a/src/app/register/register.component.scss
+++ b/src/app/register/register.component.scss
@@ -9,7 +9,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
-    filter: brightness(80%);
+    // filter: brightness(80%);
     height: 450px;
     justify-content: center;
     align-items: center;
