--- a/src/app/log-in/log-in.component.scss
+++ b/src/app/log-in/log-in.component.scss
@@ -11,7 +11,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
-    filter: brightness(80%);
+    // filter: brightness(80%);
     height: 450px;
     justify-content: center;
     align-items: center;
