--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -38,7 +38,7 @@
         display: flex;
         width: 70%;
         height: 75px;
-        background-color: rgb(225, 225, 225);
+        background-color: rgb(237, 235, 235);
             border-bottom: red solid 2px;
 
 
@@ -69,6 +69,98 @@
                 font-weight:600;
                 color: black;
                 font-size: 16px;
+            }
+        }
+    }
+
+    .productsLine{
+        display: flex;
+        width: 70%;
+        height: 110px;
+        background-color: rgb(255, 250, 250);
+        border-bottom: 2px black dashed;
+
+        .left, .right{
+            display: flex;
+            width: 50%;
+            
+        }
+
+
+        .left{
+            display: flex;
+             padding: 0px 30px;
+            align-items: center;
+
+            .imageAndEdit{
+                display: flex;
+
+                .edit{
+                    display: flex;
+                    flex-direction: column;
+                    gap: 20px;
+                    justify-content: center;
+                    i{
+                        cursor: pointer;
+                    }
+                    
+                }
+
+                .edit > i:nth-child(1):hover{
+                    color: red;
+                }
+
+                .image{
+                    display: flex;
+                    padding-left: 20px;
+
+                    img{
+                        width: 23%;
+                    }
+
+                    p{
+                        font-weight: bold;
+                        font-size: 17px;
+                        padding-top: 10px;
+                        padding-left: 20px;
+                    }
+                }
+            }
+            
+        }
+
+        .right{
+              align-items: center;
+            justify-content: end;
+            gap: 90px;
+            padding: 0px 60px;
+
+
+            .qty{
+                display: flex;
+                gap: 10px;
+
+                width: 80px;
+                height: 30px;
+
+                border: solid 2px gray;
+                border-radius: 3px;
+                align-items: center;
+                justify-content: center;
+
+                p{
+                    font-weight: bold;
+                }
+                i{
+                    cursor: pointer;
+                }
+            }
+
+            .qty > i:nth-child(1){
+                color: green;
+            }
+              .qty > i:nth-child(3){
+                color: red;
             }
         }
     }
