--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -111,7 +111,7 @@
 
     <div class="very-bottom">
       <p style="font-weight: bold;font-size: 17px;">${{el.price}}</p>
-      <a href="#" class="btn btn-danger">Add To Cart</a>
+      <a (click)="addToCart(el.id,el.price)" class="btn btn-danger">Add To Cart</a>
     </div>
 
   </div>
