--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -28,140 +28,342 @@
 }
 
 
-.cartMainContainer{
+// .cartMainContainer{
+//     display: flex;
+//     flex-direction: column;
+//    align-items: center;
+//     margin-top: 50px;
+
+//     .topCart{
+//         display: flex;
+//         width: 70%;
+//         height: 75px;
+//         background-color: rgb(237, 235, 235);
+//             border-bottom: red solid 2px;
+
+
+//         .left, .right {
+//             width: 50%;
+//             display: flex;
+//             padding: 0px 60px;
+//         }
+
+//         .left{
+//             // justify-content: center;
+//             align-items: center;
+
+//             p{
+//                 font-weight:600;
+//                 color: black;
+//                 font-size: 16px;
+//             }
+//         }
+
+//         .right{
+//                   align-items: center;
+//             justify-content: end;
+//             // gap: 30px;
+//             padding: 0px 20px;
+
+//             .qtyCont,.priceCont,.totalCont{
+//                 display: flex;
+//                 width: 20%;
+//                 height: 100%;
+         
+//                 justify-content: center;
+//                 align-items: center;
+//             }
+
+//             gap: 90px;
+
+//                         p{
+//                 font-weight:600;
+//                 color: black;
+//                 font-size: 16px;
+//             }
+//         }
+//     }
+
+//     .productsLine{
+//         display: flex;
+//         width: 70%;
+//         height: 110px;
+//         background-color: rgb(255, 250, 250);
+//         border-bottom: 2px black dashed;
+
+//         .left, .right{
+//             display: flex;
+//             width: 50%;
+            
+//         }
+
+
+//         .left{
+//             display: flex;
+//              padding: 0px 30px;
+//             align-items: center;
+
+//             .imageAndEdit{
+//                 display: flex;
+
+//                 .edit{
+//                     display: flex;
+//                     flex-direction: column;
+//                     gap: 20px;
+//                     justify-content: center;
+//                     i{
+//                         cursor: pointer;
+//                     }
+                    
+//                 }
+
+//                 .edit > i:nth-child(1):hover{
+//                     color: red;
+//                 }
+
+//                 .image{
+//                     display: flex;
+//                     padding-left: 20px;
+
+//                     img{
+//                         width: 23%;
+//                     }
+
+//                     p{
+//                         font-weight: bold;
+//                         font-size: 17px;
+//                         padding-top: 10px;
+//                         padding-left: 20px;
+//                     }
+//                 }
+//             }
+            
+//         }
+
+//         .right{
+//               align-items: center;
+//             justify-content: end;
+//             gap: 30px;
+//             padding: 0px 20px;
+//             // background-color: black;
+
+//             .qtyDiv,.priceDiv,.totalDiv{
+//                 display: flex;
+//                 width: 35%;
+//                 height: 100%;
+          
+//                 justify-content: center;
+//                 align-items: center;
+//             }
+
+//             .qty{
+//                 display: flex;
+//                 gap: 10px;
+
+//                 width: 80px;
+//                 height: 30px;
+
+//                 border: solid 2px gray;
+//                 border-radius: 3px;
+//                 align-items: center;
+//                 justify-content: center;
+               
+//                 p{
+//                     font-weight: bold;
+//                 }
+//                 i{
+//                     cursor: pointer;
+//                 }
+//             }
+
+//             .qty > i:nth-child(1){
+//                 color: green;
+//             }
+//               .qty > i:nth-child(3){
+//                 color: red;
+//             }
+//         }
+//     }
+// }
+
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Arial, sans-serif;
+}
+
+body {
+  background: #f5f5f5;
+}
+
+.cart-container {
+  width: 90%;
+  max-width: 1200px;
+  margin: 40px auto;
+}
+
+.cart-title {
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+.cart-table {
+  background: #eaeaea;
+  padding: 20px;
+  border-radius: 6px;
+}
+
+.cart-header,
+.cart-row {
+  display: grid;
+  grid-template-columns: 3fr 1fr 1fr 1fr;
+  align-items: center;
+  padding: 15px 0;
+}
+
+.cart-header {
+  font-weight: bold;
+  border-bottom: 2px solid #ccc;
+}
+
+.cart-row {
+  border-bottom: 1px solid #ccc;
+}
+
+.product-info {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+
+.product-info img {
+  width: 80px;
+  height: 80px;
+  object-fit: cover;
+  border-radius: 50%;
+}
+
+.actions {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  font-size: 18px;
+  cursor: pointer;
+}
+
+.qty-box {
+  display: flex;
+  align-items: center;
+  background: #ddd;
+  border-radius: 6px;
+  overflow: hidden;
+  width: 100px;
+}
+
+.qty-box button {
+  border: none;
+  background: #ccc;
+  padding: 8px 12px;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+.qty-box span {
+  padding: 0 15px;
+}
+
+.col-price,
+.col-total {
+  font-weight: 500;
+}
+
+.cart-bottom {
+  margin-top: 30px;
+  text-align: right;
+}
+
+.total {
+  font-size: 22px;
+  margin-bottom: 20px;
+}
+
+.total span {
+  color: red;
+  font-weight: bold;
+}
+
+.checkout-btn {
+  background: red;
+  color: white;
+  border: none;
+  padding: 15px 40px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.checkout-btn:hover {
+  background: darkred;
+}
+
+/* 🔥 Responsive */
+@media (max-width: 768px) {
+
+  .cart-header {
+    display: none;
+  }
+
+  .cart-row {
     display: flex;
     flex-direction: column;
-   align-items: center;
-    margin-top: 50px;
+    gap: 15px;
+    background: #eaeaea;
+    padding: 20px;
+    border-radius: 8px;
+    margin-bottom: 20px;
+  }
 
-    .topCart{
-        display: flex;
-        width: 70%;
-        height: 75px;
-        background-color: rgb(237, 235, 235);
-            border-bottom: red solid 2px;
+  .product-info {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 10px;
+  }
 
+  .actions {
+    flex-direction: row;
+    gap: 15px;
+    align-self: flex-start;
+  }
 
-        .left, .right {
-            width: 50%;
-            display: flex;
-            padding: 0px 60px;
-        }
+  .col-qty {
+    align-self: flex-start;
+  }
 
-        .left{
-            // justify-content: center;
-            align-items: center;
+  .col-price,
+  .col-total {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    font-size: 16px;
+  }
 
-            p{
-                font-weight:600;
-                color: black;
-                font-size: 16px;
-            }
-        }
+  .col-price::before {
+    content: "Price:";
+    font-weight: bold;
+  }
 
-        .right{
-            align-items: center;
-            justify-content: end;
+  .col-total::before {
+    content: "Total:";
+    font-weight: bold;
+  }
 
-            gap: 90px;
+  .cart-bottom {
+    text-align: center;
+  }
 
-                        p{
-                font-weight:600;
-                color: black;
-                font-size: 16px;
-            }
-        }
-    }
-
-    .productsLine{
-        display: flex;
-        width: 70%;
-        height: 110px;
-        background-color: rgb(255, 250, 250);
-        border-bottom: 2px black dashed;
-
-        .left, .right{
-            display: flex;
-            width: 50%;
-            
-        }
-
-
-        .left{
-            display: flex;
-             padding: 0px 30px;
-            align-items: center;
-
-            .imageAndEdit{
-                display: flex;
-
-                .edit{
-                    display: flex;
-                    flex-direction: column;
-                    gap: 20px;
-                    justify-content: center;
-                    i{
-                        cursor: pointer;
-                    }
-                    
-                }
-
-                .edit > i:nth-child(1):hover{
-                    color: red;
-                }
-
-                .image{
-                    display: flex;
-                    padding-left: 20px;
-
-                    img{
-                        width: 23%;
-                    }
-
-                    p{
-                        font-weight: bold;
-                        font-size: 17px;
-                        padding-top: 10px;
-                        padding-left: 20px;
-                    }
-                }
-            }
-            
-        }
-
-        .right{
-              align-items: center;
-            justify-content: end;
-            gap: 90px;
-            padding: 0px 60px;
-
-
-            .qty{
-                display: flex;
-                gap: 10px;
-
-                width: 80px;
-                height: 30px;
-
-                border: solid 2px gray;
-                border-radius: 3px;
-                align-items: center;
-                justify-content: center;
-
-                p{
-                    font-weight: bold;
-                }
-                i{
-                    cursor: pointer;
-                }
-            }
-
-            .qty > i:nth-child(1){
-                color: green;
-            }
-              .qty > i:nth-child(3){
-                color: red;
-            }
-        }
-    }
+  .checkout-btn {
+    width: 100%;
+  }
 }
